syntax = "proto3";
option csharp_namespace = "CecoChat.Chats.Contracts";
package CecoChat.Chats.Contracts;
import "google/protobuf/timestamp.proto";
import "HistoryMessage.proto";
import "ChatState.proto";

service Chats {
  rpc GetUserChats(GetUserChatsRequest) returns (GetUserChatsResponse);
  rpc GetChatHistory(GetChatHistoryRequest) returns (GetChatHistoryResponse);
}

message GetUserChatsRequest {
  google.protobuf.Timestamp newer_than = 1;
}

message GetUserChatsResponse {
  repeated ChatState chats = 1;
}

message GetChatHistoryRequest {
  int64 other_user_id = 1;
  google.protobuf.Timestamp older_than = 2;
}

message GetChatHistoryResponse {
  repeated HistoryMessage messages = 1;
}
